// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaultProps should render correctly for className 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:1568px) {
  .emotion-1 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .emotion-1 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .emotion-1 {
    max-width: 768px;
  }
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-3 {
  color: #574feb !important;
}

<div
  class="emotion-4 emotion-2 emotion-6 fp-Box fp-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 test fp-Box fp-Container fp-PageContent"
  >
    hello world
  </div>
</div>
`;

exports[`overrides css.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:1568px) {
  .emotion-1 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .emotion-1 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .emotion-1 {
    max-width: 768px;
  }
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-4 emotion-2 emotion-3 fp-Box fp-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Container fp-PageContent"
  >
    hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:1568px) {
  .emotion-1 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .emotion-1 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .emotion-1 {
    max-width: 768px;
  }
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

<div
  class="emotion-4 emotion-2 emotion-3 fp-Box fp-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Container fp-PageContent"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:1568px) {
  .emotion-1 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .emotion-1 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .emotion-1 {
    max-width: 768px;
  }
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-3 {
  color: #574feb !important;
}

<div
  class="emotion-4 emotion-2 emotion-6 fp-Box fp-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Container fp-PageContent"
  >
    Hello world
  </div>
</div>
`;

exports[`theming css.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:1568px) {
  .emotion-1 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .emotion-1 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .emotion-1 {
    max-width: 768px;
  }
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-4 emotion-2 emotion-3 fp-Box fp-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Container fp-PageContent"
  >
    hello world
  </div>
</div>
`;

exports[`variants css.root should render correctly 1`] = `
.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-1 {
  width: 100%;
  max-width: 1440px;
  margin-left: auto;
  margin-right: auto;
}

@media (max-width:1568px) {
  .emotion-1 {
    max-width: 1200px;
  }
}

@media (max-width:1328px) {
  .emotion-1 {
    max-width: 1024px;
  }
}

@media (max-width:1152px) {
  .emotion-1 {
    max-width: 768px;
  }
}

.emotion-0 {
  padding: 2rem 1rem;
}

@media screen and (max-width:768px) {
  .emotion-0 {
    padding-top: 1rem;
    padding-bottom: 1rem;
  }
}

.emotion-0 {
  background-color: red;
}

<div
  class="emotion-4 emotion-2 emotion-3 fp-Box fp-PageContentWrapper"
>
  <div
    class="emotion-0 emotion-1 emotion-2 emotion-3 fp-Box fp-Container fp-PageContent"
  >
    hello world
  </div>
</div>
`;
